--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: python
 
 python:
-   - 2.7
-   - 3.3
+  - "2.7"
+  - "3.3"
+  - "pypy"
 
 install:
-   pip install pytest
+  - "pip install . "
+  - "pip install -r requirements.txt"
 
-script:
-   py.test
+script: py.test
