--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ python:
   - "pypy"
 
 install:
-  - "pip install . "
-  - "pip install -r requirements.txt"
+  - "pip install -r requirements.txt ."
 
 script: py.test
