--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,14 @@
 [tox]
 envlist = py27,py33
 
-[py27]
-deps = pytest
+[testenv]
+deps =
+  pytest
+  mock
 commands = py.test
 
-[py33]
-deps = pytest
-commands = py.test
+[testenv:py27]
+basepython=python2.7
+
+[testenv:py33]
+basepython=python3.3
